# studyings_personal

./: .gitignore  README.md
coding_apple/docker/compose/: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  package.json  server.js
coding_apple/docker/fast_api/: Dockerfile  main.py  requirements.txt
coding_apple/javascript/: index.html
coding_apple/javascript/classlist/: index.html  main.css  modal.css  modal.html
coding_apple/javascript/selector/: index.html  main.css
coding_apple/web/: flex.html
coding_apple/web/css/: basic.css  cart.css  flex.css  layout1.css  layout2.css  paragraph.css  profile_image.css
coding_apple/web/html/: cart.html  elementary.html  layout1.html  layout2.html  styling.html
cpp/: main.cpp  math.cpp  math.h
cpp/multi_lang/app/: main.py  pyproject.toml
cpp/multi_lang/cpp_lib/: CMakeLists.txt
cpp/multi_lang/cpp_lib/src/: main.cpp
cpp/거꾸로_읽는_cpp/ch3/: call_by.cpp  datas.cpp  encapsutlation.cpp  hiding.cpp  input.cpp  reminder.md  stls.cpp  struct_vs_class.cpp
database/: .env  pyproject.toml
database/app/: main.py  models.py  query.py  test.py
fast_api/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
intro_ai/: activate.sh  cnn.ipynb  gradient_decent.py  propagation.py
pybind/: CmakeLists.txt
pybind/app/: main.py
pybind/src/: mymodule.cpp
python/: activate.sh  gradient_decent.ipynb  propagation.ipynb  propagation.py
rust/: README.md
rust/my_first_rust/: README.md  background_knowledge.md
rust/tcp/: Cargo.toml
typescript/cdap/: index.js  index.ts  tsconfig.json
(+41 files in other folders)
